--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,31 @@
-<md-sidenav-container mode="side">
+<md-sidenav-container mode="push" class="km-dark">
 
-  <md-sidenav #start (open)="closeStartButton.focus()">
-    Start Sidenav.
-    <br>
-    <button md-button #closeStartButton (click)="start.close()">Close</button>
-  </md-sidenav>
-  <md-sidenav #end align="end">
-    End Sidenav.
-    <button md-button (click)="end.close()">Close</button>
-  </md-sidenav>
+    <md-sidenav #sidenav mode="side" opened="false">
+        Menu goes here
+    </md-sidenav>
 
-  <div [fxLayout]="direction">
-    <div fxFlex>
-      FFFFF
+    <md-toolbar color="primary">
+        <button md-button (click)="sidenav.toggle()">
+            <md-icon class="km-toolbar-icon">more_vert</md-icon>
+        </button>
+        <span>{{ title }}</span>
+        <span class="km-toolbar-spacer"></span>
+        <span class="button-row">
+            <button md-mini-fab *ngFor="let el of accounts; let i=index" (click)="openInTab(i)" [mdTooltip]="el.label" mdTooltipPosition="below">
+                <md-icon class="km-toolbar-icon">{{ el.icon }}</md-icon>
+            </button>
+        </span>
+    </md-toolbar>
+
+    <div fxLayout="row"
+         fxLayoutAlign="space-around center" 
+         class="km-spa-content">
+        <div fxFlex="80%" fxFlexAlign="stretch">
+            <h1>{{ title }}</h1>
+        </div>
+        <aside fxFlex fxFlexFill fxHide.md fxHide.sm fxHide.xs>
+            <h1>{{ title }}</h1>
+        </aside>
     </div>
-  </div>
 
 </md-sidenav-container>
