--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
             <!-- main content goes here -->
         </div>
         <aside fxFlex fxFlexFill fxHide.md fxHide.sm fxHide.xs>
-            <!-- bio goes here-->
+            <km-bio></km-bio>
         </aside>
     </div>
 
