--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,8 @@
     <div fxLayout="row"
          fxLayoutAlign="space-around center" 
          class="km-spa-content">
-        <div fxFlex="80%" fxFlexAlign="stretch">
-            <!-- main content goes here -->
+        <div fxFlex="80%" fxFlexAlign="stretch" class="km-content">
+            <router-outlet></router-outlet>
         </div>
         <aside fxFlex fxFlexFill fxHide.md fxHide.sm fxHide.xs>
             <km-bio></km-bio>
