--- a/src/common/spinner.css
+++ b/src/common/spinner.css
@@ -1,49 +1,8 @@
-.react-spinner {
-  width: 32px;
-  height: 32px;
-  margin: auto auto;
-  display: grid;
-  justify-content: center;
-  align-items: center;
+.spinner {
+    padding: 1rem;
 }
 
-.react-spinner-bar {
-  -webkit-animation: react-spinner_spin 1.2s linear infinite;
-  -moz-animation: react-spinner_spin 1.2s linear infinite;
-  animation: react-spinner_spin 1.2s linear infinite;
-  border-radius: 10px;
-  background-color: black;
-  position: absolute;
-  width: 18px;
-  height: 6px;
-  top: 36px;
-  margin-right: auto !important;
-  margin-left: auto !important;
-}
-
-@keyframes react-spinner_spin {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.15;
-  }
-}
-
-@-moz-keyframes react-spinner_spin {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.15;
-  }
-}
-
-@-webkit-keyframes react-spinner_spin {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.15;
-  }
+.spinner>i.fa {
+    font-size: 2rem;
+    width: 2rem;
 }
