--- a/src/main.scss
+++ b/src/main.scss
@@ -1,31 +1,67 @@
 main {
   display: grid;
-  grid-template-columns: 1fr 15rem;
-  grid-template-rows: 5rem auto 2rem;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-template-areas:
-    'header header'
-    'console console'
-    'commands footer';
-  grid-row-gap: 1px;
-  width: 100vw;
-  height: 100vh;
+    'header header . content content content'
+    'logo logo . content content content'
+    'logo logo . content content content'
+    'logo logo . content content content';
+  grid-gap: 1rem;
+
+  margin: 2vh 1vw 2vh 1vw;
+  width: 98vw;
+  height: 96vh;
+
   align-items: stretch;
   justify-content: stretch;
   align-content: stretch;
 
   header {
     grid-area: header;
+    align-self: center;
+    justify-self: center;
   }
 
-  section {
-    grid-area: console;
+  .logo {
+    grid-area: logo;
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 5rem;
+    }
   }
 
-  input {
-    grid-area: commands;
-  }
+  .content {
+    grid-area: content;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas:
+      'c11 c12 c13 c14'
+      'c21 c22 c23 c24'
+      'c31 c32 c33 c34'
+      'c41 c42 c43 c44';
+    grid-gap: 1rem;
 
-  footer {
-    grid-area: commands;
+    align-items: stretch;
+    justify-content: stretch;
+    align-content: stretch;
+
+    margin: 1rem 0 1rem 0;
+
+    .tile {
+      width: 100%;
+      height: 100%;
+
+      &:hover {
+        transform: scale(1.1);
+        border-radius: 5%;
+        z-index: 1000;
+        box-shadow: 0px 0px 15px 5px rgba(202, 194, 242, 1);
+        cursor: pointer;
+      }
+    }
   }
 }
