Some nicer layout

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,6 +8,19 @@
 
 body {
   font-family: 'hattori_hanzolight';
+  &:before {
+    content: '';
+    position: fixed;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+    z-index: 100;
+  }
+  align-items: stretch;
+  justify-content: stretch;
+  align-content: stretch;
 
   main {
     display: grid;
@@ -15,38 +28,37 @@ body {
     grid-template-rows: repeat(6, 1fr);
     grid-template-areas:
       '. header header . . . nav .'
-      '. logo logo . content content content .'
-      '. logo logo . content content content .'
-      '. logo logo . content content content .'
-      '. logo logo . content content content .'
-      '. . . . . . . .';
+      '. avatar avatar . content content content .'
+      '. avatar avatar . content content content .'
+      '. avatar avatar . content content content .'
+      '. avatar avatar . content content content .'
+      '. . footer footer footer footer . .';
     grid-gap: 1rem;
 
     margin: 2vh 1vw 2vh 1vw;
     width: 98vw;
     height: 96vh;
 
-    align-items: stretch;
-    justify-content: stretch;
-    align-content: stretch;
-
     header {
       grid-area: header;
-      align-self: center;
-      justify-self: center;
+    }
+    footer {
+      grid-area: footer;
+      border-top: 1px solid black;
+      border-radius: 10px;
     }
 
     nav {
+      grid-area: nav;
+
       position: sticky;
       top: -1;
-
-      grid-area: nav;
-      align-self: center;
-      justify-self: center;
     }
 
-    .logo {
-      grid-area: logo;
+    .avatar {
+      grid-area: avatar;
+      display: flex;
+
       img {
         height: auto;
         max-width: 100%;
@@ -57,10 +69,8 @@ body {
 
     .content {
       grid-area: content;
-
-      align-items: stretch;
-      justify-content: stretch;
-      align-content: stretch;
+      display: flex;
+      flex-flow: column;
 
       .greeting {
         text-align: center;
