--- a/src/main.scss
+++ b/src/main.scss
@@ -99,13 +99,25 @@ body {
     @include fullhd {
       .avatar {
         grid-area: avatar;
+
         display: flex;
+        flex-flow: column;
+
         visibility: visible;
+
+        align-items: center;
+        justify-content: center;
+
         img {
           height: auto;
           max-width: 100%;
           object-fit: scale-down;
           border-radius: 5rem;
+        }
+        .caption {
+          height: 10px;
+          font-weight: bold;
+          opacity: 0.7;
         }
       }
     }
