--- a/src/main.scss
+++ b/src/main.scss
@@ -106,6 +106,11 @@ body {
     }
     footer {
       grid-area: footer;
+
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+
       .whatpulse {
         @extend .has-background-grey;
         padding-right: 2rem;
