--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,36 @@
   font-style: normal;
 }
 
+.side-by-side {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .left-side,
+  .right-side {
+    display: flex;
+    & > * {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  .left-side {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .right-side {
+    align-items: center;
+    justify-content: flex-end;
+  }
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  object-fit: scale-down;
+  border-radius: 5rem;
+}
+
 body {
   font-family: 'hattori_hanzolight';
   @extend .is-black;
@@ -76,8 +106,15 @@ body {
     }
     footer {
       grid-area: footer;
-      border-top: 1px solid black;
-      border-radius: 10px;
+
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+
+      .whatpulse {
+        @extend .has-background-grey;
+        padding-right: 2rem;
+      }
     }
 
     nav {
@@ -108,12 +145,6 @@ body {
         align-items: center;
         justify-content: center;
 
-        img {
-          height: auto;
-          max-width: 100%;
-          object-fit: scale-down;
-          border-radius: 5rem;
-        }
         .caption {
           height: 10px;
           font-weight: bold;
