--- a/src/Main.scss
+++ b/src/Main.scss
@@ -1,14 +1,13 @@
 @import './responsivness.scss';
 @import './colors.scss';
+@import './timeline.scss';
 
 @font-face {
-  src: url('https://fonts.googleapis.com/css?family=Chivo:300,300i,400,400i,700,700i,900,900i|Saira+Extra+Condensed:100,200,300,400,500,600,700,800|Saira:100,200,300,400,500,600,700,800');
+  src: url('https://fonts.googleapis.com/css?family=Chivo:300,300i,400,400i,700,700i,900,900i');
+  font-family: 'Chivo', sans-serif;
   font-weight: normal;
   font-style: normal;
 }
-
-$font-title: 'Saira', sans-serif;
-$font-text: 'Chivo', sans-serif;
 
 img {
   height: auto;
@@ -18,8 +17,6 @@ img {
 }
 
 body {
-  font-family: $font-text;
-
   background-color: $black;
   color: $light;
 
@@ -36,85 +33,12 @@ body {
 
   overflow: hidden auto;
 
-  $line: 4px;
-  $radius: 4px;
-  $spacing: 50px;
-  $dot: 4px;
-  $dotborder: 4px;
-  $date: 120px;
+  main {
+    display: grid;
+    grid-template-columns: 15vw 1fr 60vw;
+    grid-template-rows: auto;
+    grid-template: 'nav . content';
 
-  .timeline {
-    border-left: $line solid $primary;
-    border-bottom-right-radius: $radius;
-    border-top-right-radius: $radius;
-    background: fade($light, 3%);
-    color: fade(white, 80%);
-    margin: $spacing auto;
-    letter-spacing: 0.5px;
-    position: relative;
-    line-height: 1.4em;
-    font-size: 1.03em;
-    padding: $spacing;
-    list-style: none;
-    text-align: left;
-    font-weight: 100;
-    max-width: 30%;
-
-    h1 {
-      font-family: $font-title;
-      letter-spacing: 1.5px;
-      font-weight: 100;
-      font-size: 1.4em;
-    }
-
-    h2,
-    h3 {
-      font-family: $font-title;
-      letter-spacing: 1.5px;
-      font-weight: 400;
-      font-size: 1.4em;
-    }
-
-    .event {
-      border-bottom: 1px dashed fade($light, 10%);
-      padding-bottom: ($spacing * 0.5);
-      margin-bottom: $spacing;
-      position: relative;
-
-      &:last-of-type {
-        padding-bottom: 0;
-        margin-bottom: 0;
-        border: none;
-      }
-
-      &:before,
-      &:after {
-        position: absolute;
-        display: block;
-        top: 0;
-      }
-
-      &:before {
-        left: ((($date * 0.6) + $spacing + $line + $dot + ($dotborder * 2)) * 1.5) * -1;
-        color: fade($light, 40%);
-        content: attr(data-date);
-        text-align: right;
-        font-weight: 100;
-        font-size: 0.9em;
-        min-width: $date;
-        font-family: $font-title;
-      }
-
-      &:after {
-        box-shadow: 0 0 0 $dotborder fade($primary, 100%);
-        left: ($spacing + $line + ($dot * 0.35)) * -1;
-        background: lighten($black, 5%);
-        border-radius: 50%;
-        height: $dot;
-        width: $dot;
-        content: '';
-        top: 5px;
-      }
-    }
+    @include timeline(content);
   }
 }
