--- a/src/Main.scss
+++ b/src/Main.scss
@@ -36,8 +36,12 @@ body {
   main {
     display: grid;
     grid-template-columns: 15vw 1fr 60vw;
-    grid-template-rows: auto;
+    grid-template-rows: 90vh;
     grid-template: 'nav . content';
+    align-self: center;
+    justify-self: center;
+
+    grid-gap: 1rem;
 
     @include timeline(content);
   }
