--- a/src/timeline.scss
+++ b/src/timeline.scss
@@ -23,6 +23,8 @@ $date: 120px;
   text-align: left;
   font-weight: 100;
   max-width: 50%;
+  max-height: 90vh;
+  overflow: hidden auto;
 
   h1 {
     letter-spacing: 1.5px;
