And more content and adjustements

--- a/src/timeline.scss
+++ b/src/timeline.scss
@@ -1,15 +1,12 @@
 @import './colors.scss';
 
-$line: 4px;
-$radius: 4px;
+$line: 5px;
+$radius: 5px;
 $spacing: 50px;
-$dot: 4px;
-$dotborder: 4px;
-$date: 120px;
 
 .timeline {
   grid-area: content;
-  justify-self: end;
+  justify-self: flex-end;
 
   border-left: $line solid $primary;
   border-bottom-right-radius: $radius;
@@ -22,63 +19,37 @@ $date: 120px;
   list-style: none;
   text-align: left;
   font-weight: 100;
-  max-width: 50%;
+  max-width: 75%;
   max-height: 90vh;
   overflow: hidden auto;
 
-  h1 {
-    letter-spacing: 1.5px;
-    font-weight: 100;
-    font-size: 1.4em;
+  &::-webkit-scrollbar {
+    width: ($line * 2);
   }
 
-  h2,
-  h3 {
-    letter-spacing: 1.5px;
-    font-weight: 400;
-    font-size: 1.4em;
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px transparentize($dim, 0.9);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary;
+    outline: 1px dashed $black;
   }
 
   .event {
-    border-bottom: 1px dashed fade($light, 10%);
-    padding-bottom: ($spacing * 0.5);
-    margin-bottom: $spacing;
-    position: relative;
-
+    .header {
+      letter-spacing: 1.5px;
+      font-weight: 400;
+      font-size: 1.4em;
+    }
+    padding-bottom: ($spacing * 0.25);
+    padding-right: ($spacing * 0.75);
+    margin-bottom: ($spacing * 0.5);
     text-align: justify;
 
     &:last-of-type {
       padding-bottom: 0;
       margin-bottom: 0;
-      border: none;
-    }
-
-    &:before,
-    &:after {
-      position: absolute;
-      display: block;
-      top: 0;
-    }
-
-    &:before {
-      left: ((($date * 0.6) + $spacing + $line + $dot + ($dotborder * 2)) * 1.5) * -1;
-      color: fade($light, 40%);
-      content: attr(data-date);
-      text-align: right;
-      font-weight: 100;
-      font-size: 0.9em;
-      min-width: $date;
-    }
-
-    &:after {
-      box-shadow: 0 0 0 $dotborder fade($primary, 100%);
-      left: ($spacing + $line + ($dot * 0.35)) * -1;
-      background: lighten($black, 5%);
-      border-radius: 50%;
-      height: $dot;
-      width: $dot;
-      content: '';
-      top: 5px;
     }
   }
 }
