--- a/src/Main.scss
+++ b/src/Main.scss
@@ -2,13 +2,13 @@
 @import './colors.scss';
 @import './timeline.scss';
 @import './nav.scss';
+@import './emoji.scss';
 
 @font-face {
   src: url('https://fonts.googleapis.com/css?family=Chivo:300,300i,400,400i,700,700i,900,900i');
   font-family: 'Chivo', sans-serif;
   font-weight: normal;
   font-style: normal;
-  font-size: smaller;
 }
 
 img {
@@ -19,8 +19,8 @@ img {
 }
 
 body {
-  background-color: $black;
-  color: $light;
+  background-color: $light;
+  color: $black;
 
   &:before {
     content: '';
@@ -29,7 +29,7 @@ body {
     left: 0;
     width: 100%;
     height: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 15px 15px transparentize($black, 0.5);
     z-index: 100;
   }
 
@@ -44,7 +44,7 @@ body {
     justify-self: center;
 
     grid-gap: 1rem;
-    padding: 2rem 10rem;
+    padding: 2rem 5rem;
 
     aside {
       display: grid;
