Finish content and improved, but not finished, styling

--- a/src/Main.scss
+++ b/src/Main.scss
@@ -35,17 +35,21 @@ body {
 
   overflow: hidden auto;
 
-  main {
+  #root {
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
     grid-template-rows: 1fr;
-    grid-template: 'aside . content';
+    grid-template: 'aside . main';
     align-self: center;
     justify-self: center;
 
     grid-gap: 1rem;
-    padding: 2rem 5rem;
+    padding: 2rem 2rem;
+    margin: 0 1rem;
 
+    main {
+      grid-area: main;
+    }
     aside {
       display: grid;
       grid-area: aside;
